--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>syam kopi</title>
+    <title>SyamKopi</title>
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
