--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <main>
       <!-- Hero Section Start -->
       <section class="hero" id="home">
-        <main class="content">
+        <div class="content">
           <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
           <p>
             Rasakan Kebahagiaan dalam <br />
             Setiap Cangkir Kopi
           </p>
           <!-- <a href="#" class="cta">Beli Sekarang</a> -->
-        </main>
+        </div>
       </section>
       <!-- Hero Section end -->
 
